# CNN

./: .gitignore  CMakeLists.txt  README.md
Doc/: Doxyfile
Examples/: CMakeLists.txt
Examples/And/: CMakeLists.txt  main.cxx
Examples/Sin/: CMakeLists.txt  main.cxx
Include/: CBackpropagationTeacher.hxx  CGenericNetwork.hxx  CLevMaqTeacher.hxx  CNN.hxx  CNeuron.hxx  CPerceptron.hxx  CReciever.hxx  CTeacher.hxx
Src/: CBackpropagationTeacher.cxx  CLevMaqTeacher.cxx  CNeuron.cxx  CPerceptron.cxx  CReciever.cxx  CTeacher.cxx
